# skillpack

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  skillpack.toml
.claude-plugin/: marketplace.json  plugin.json
.codex/skills/skillpack/: SKILL.md
.cursor/rules/: skillpack.mdc
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml  skillpack.yml
.omo/run-continuation/: ses_0b6e677d8ffe8iF7VbXIRM2eCs.json
.opencode/agents/: skillpack.md
docs/: agent-demo.md
docs/demo/transcripts/: condition-a-logs.txt  condition-a-no-skillpack.json  condition-b-logs.txt  condition-b-with-skillpack.json  questions.txt
skills/skillpack/: SKILL.md
src/: cli.rs  config.rs  exit.rs  generate.rs  interview.rs  introspect.rs  lib.rs  main.rs  spawn.rs  types.rs
src/introspect/: cli_candidates.rs  cli_probe.rs  manifest.rs  repo.rs  workspace.rs
src/verify/: discovery.rs  fix.rs  invocation.rs  mod.rs  result.rs  schema.rs
src/verify/discovery/: agentsmd.rs  copilot.rs  cursor.rs  opencode.rs
templates/: SKILL.md.tera  copilot-instructions.md.tera  cursor-rule.mdc.tera  marketplace.json.tera  opencode-agent.md.tera  plugin.json.tera  skill_body.md.tera
tests/: integration_end_to_end.rs  property_proptest.rs  snapshots.rs
tests/fixtures/repos/bad-help/: Cargo.toml
tests/fixtures/repos/broken-cli/: Cargo.toml
tests/fixtures/repos/csharp-cli/: Program.cs  README.md  sample-csharp.csproj
tests/fixtures/repos/go-cli/: README.md  go.mod  main.go
tests/fixtures/repos/jvm-cli/: README.md  build.gradle  pom.xml
tests/fixtures/repos/node-cli/: README.md  package.json
tests/fixtures/repos/node-lib/: README.md  index.js  package.json
tests/fixtures/repos/php-cli/: README.md  composer.json
tests/snapshots/: snapshots__copilot_cli.snap  snapshots__cursor_cli.snap  snapshots__cursor_csharp.snap  snapshots__cursor_jvm.snap  snapshots__cursor_php.snap  snapshots__marketplace_cli.snap  snapshots__marketplace_lib.snap  snapshots__opencode_cli.snap  snapshots__plugin_cli.snap  snapshots__plugin_lib.snap  snapshots__skill_cli.snap  snapshots__skill_lib.snap  snapshots__target_all_rel_paths.snap
(+20 files in other folders)
